--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -11,9 +11,6 @@
   padding: 0;
   box-sizing: border-box;
 }
-/* img {
-  width: 100%;
-} */
 
 body {
   font-family: "Red Hat Display", sans-serif;
@@ -26,12 +23,16 @@ body {
   font-size: 16px;
 }
 
+.front-image {
+  width: 100%;
+}
+
 .container {
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  max-width: 450px;
+  max-width: 425px;
   background-color: white;
   border-radius: 20px;
   overflow: hidden;
@@ -102,6 +103,7 @@ a.payment-btn {
   margin: 30px 0;
   font-weight: 700;
 }
+
 a.payment-btn:hover {
   background-color: var(--desaturated-blue);
 }
@@ -111,6 +113,7 @@ a.cancel-btn {
   text-decoration: none;
   font-weight: 900;
 }
+
 a.cancel-btn :hover {
   color: var(--dark-blue);
 }
@@ -120,29 +123,37 @@ a.cancel-btn :hover {
     background-image: url(../images/pattern-background-mobile.svg);
     font-size: 14px;
   }
+
   .container {
     max-width: 85%;
   }
+
   .title {
     font-size: 22px;
   }
+
   div.annual-plan {
     padding: 12px;
   }
+
   .plan-left div {
     margin-left: 10px;
   }
+
   a.payment-btn,
   a.cancel-btn {
     font-size: 13px;
   }
+
   .change {
     font-size: 2;
   }
+
   .content {
     padding: 9% 7%;
     text-align: center;
   }
+
   img {
     width: 100%;
   }
